<resources>
    <string name="app_name">FYP_Mobile</string>
    <string name="app_login">Login</string>
    <string name="app_register">Register</string>
    <string name="app_email">Email</string>
    <string name="app_password">Password</string>
    <string name="app_forgot">Forgot Password?</string>
    <string name="app_capture">Capture</string>
    <string name="app_receipt">Capture and crop a receipt image within the boundaries indicated below:</string>
    <string name="app_confirm">Confirm</string>
    <string name="app_retake">Retake</string>
    <string name="image_taken_by_camera">Image taken by camera</string>
    <string name="app_forgot_password">Forgot Password?</string>
</resources>